# return2edu-paper

./: .gitignore  Compare-Anna-Treatment-Outcomes.ipynb  Data Processing.ipynb  Data-Processing.ipynb  Dimensionality-Reduction.ipynb  Direct-Bayesian-AZ1.ipynb  Direct-Bayesian.ipynb  Direct-Regression-All-Vars.ipynb  Direct-Regression-simplified-simulated-data.ipynb  Direct-Regression.ipynb  EconML-Binary-Treatment-Test.ipynb  EconML2.ipynb  Econml.ipynb  Generate_Synthetic_Example.ipynb  LICENSE  La.ipynb  Modelling.ipynb  OLS-basic-vars.ipynb  README.md  Re-education.ipynb  Test_selected_features.ipynb  Testing-Validation-Approaches.ipynb  _config.yml  _toc.yml  bayesian prototyping.ipynb  bootstrap.py  clean.py  config.py  config_dan.py  config_finn.py  convert_notebooks_to_py_tmp.sh  datagen.py  direct_regression.py  duplicate.ipynb  duplicate.py  earnings-bayesian.ipynb  env.yml  environment.yml  estimators.py  execute_notebooks.py  (+8 more)
Papers and Presentations/: Online Appendix Reeducation_main sample analysis_features.docx  Online Appendix Reeducation_main sample analysis_features_v2.docx  Online Appendix Reeducation_sensitivity analysis sample.docx  Online Appendix Reeducation_sensitivity analysis sample_v2.docx  ~$line Appendix Reeducation_main sample analysis_features_v2.docx  ~$line Appendix Reeducation_sensitivity analysis sample_v2.docx
bootstrap-breaking/: annotated_bib.md  bib.bib  bootstrap-breaking.ipynb  break_bs.py
bootstrap_vs_crossval_sims/: Direct-Regression-no-nesting.ipynb  Direct-Regression-simplified-simulated-data.ipynb  FullySytheticDGP.ipynb  (+2 more)
(+141 files in other folders)
