[tool.poetry]
name = "re-education"
version = "0.1.0"
description = ""
authors = ["Dan Steinberg <dan.m.steinberg@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
jupyter = "^1.0.0"
matplotlib = "^3.5.1"
numpy = "^1.22.3"
pandas = "^1.4.1"
scipy = "^1.8.0"
scikit-learn = ">=1.0"
seaborn = "^0.11.2"
statsmodels = "^0.13.2"
tqdm = "^4.63.0"
jupyter-contrib-nbextensions = "^0.5.1"
jupyter-book = "^0.12.2"
papermill = "^2.3.4"
pyro-ppl = {git = "https://github.com/pyro-ppl/pyro.git"}
xbcausalforest = "^0.1.3"
lightgbm = "^3.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
