[metadata]
name = "reed"
version = file: {name}/_version.txt
description = "Estimating impact of education post age 25"
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
platform = any


[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
ignore = D200, D203, D213, D406, D407   # Google conventions
    
[flake8]
max-line-length = 99
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/

